# compute-sentry

./: .gitignore  GEMINI.md  K8S_TEST_PLAN.md  README.md
agent/: Dockerfile  Makefile  go.mod  go.sum  main.go
agent/collector/: collector.go  evaluator.go
agent/exporter/: prometheus.go
docs/: Compute-Sentry开发路线与业务逻辑.md  Compute-Sentry项目方案.md  DEVELOPMENT.md  FEATURES_AND_FLOW.md  K8S_TEST_PLAN.md  PHASE2_VERIFICATION.md  add-governance-docs.md  governance-architecture.md  项目提案.md
examples/: a  a.cpp
examples/cuda-hook/: CMakeLists.txt  cuda_hook.cpp  test_cuda.cpp
manifests/: agent-daemonset.yaml  agent-rbac.yaml
operator/: Makefile  PROJECT  go.mod
operator/api/v1/: computesentrypolicy_types.go  groupversion_info.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/config/crd/: kustomization.yaml
operator/config/default/: kustomization.yaml
operator/config/manager/: kustomization.yaml  manager.yaml
operator/config/rbac/: computesentrypolicy_admin_role.yaml  computesentrypolicy_editor_role.yaml  computesentrypolicy_viewer_role.yaml  role.yaml  (+1 more)
operator/precheck/: precheck.sh
operator/test/: test-policy.yaml
scripts/: precheck.sh
spy/: CMakeLists.txt
spy/.cache/clangd/index/: queue.h.19D1F332EE8C2342.idx  spy.cpp.CA76F004F0B05272.idx  uds.h.67E64288C924112D.idx
spy/include/: queue.h  uds.h
spy/src/: spy.cpp
tests/: example-policy.yaml  kubeconfig  pod-test-1.yaml  pod-test-2.yaml  pod-test-3.yaml  test-injection.yaml  test-node-healing-policy.yaml
tests/mock/: agent_mock.go  mock_nccl.cpp  training_mock  training_mock.cpp
(+15 files in other folders)
